apps/http-server/http-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  type: ClusterIP
  selector:
    app: http-server
  ports:
    - name: http-server
      port: 3000
      targetPort: 3000
