apps/http-server/http-server-ext-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-server-ext
  labels:
    type: external
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - serve.former-hostname.com
      secretName: serve.former-hostname.com
  rules:
    - host: serve.former-hostname.com
      http:
        paths:
          - backend:
              serviceName: http-server
              servicePort: 3000
            path: /
