apps/http-server/http-server-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-local
  labels:
    type: local
spec:
  rules:
    - host: serve.local
      http:
        paths:
          - backend:
              service:
                name: http-server
                port:
                  number: 3000
            path: /
            pathType: Prefix
